objects/ssot__AcademicCredential__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Academic Credential Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__IssuerId__c</fullName>
        <label>Issuer</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Type__c</fullName>
        <label>Type</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1719817644970_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>AcademicCredential_IssuerId_map_Acco_rel</label>
        <referenceTo>ssot__Account__dlm</referenceTo>
        <relationshipLabel>AcademicCredential_IssuerId_map_Acco_rel</relationshipLabel>
        <relationshipName>rel_1719817644970_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>